--- a/app/code/Smacnew/Home/view/frontend/templates/home.phtml
+++ b/app/code/Smacnew/Home/view/frontend/templates/home.phtml
@@ -10,88 +10,6 @@
     }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<!--<div class="row top-navbar" style="background-color: #ffffff;">
-    <div class="container">
-        <div class="navbar" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Danh mục</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#" class="menu-item dropdown-toggle" data-toggle="dropdown">Mỹ phẩm&nbsp;<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Mỹ phẩm 1</a></li>
-                                <li><a href="#">Mỹ phẩm 2</a></li>
-                                <li><a href="#">Mỹ phẩm 3</a></li>
-                                <li><a href="#">Mỹ phẩm 4</a></li>
-                                <li>
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mỹ phẩm 5<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Mỹ phẩm 5.1</a></li>
-                                        <li>
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mỹ phẩm 5.2<b class="caret"></b></a>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mỹ phẩm 5.2.1 <b class="caret"></b></a>
-                                                    <ul class="dropdown-menu">
-                                                        <li><a href="#">Mỹ phẩm 5.2.1.1</a></li>
-                                                        <li><a href="#">Mỹ phẩm 5.2.1.2</a></li>
-                                                        <li><a href="#">Mỹ phẩm 5.2.1.3</a></li>
-                                                        <li><a href="#">Mỹ phẩm 5.2.1.4</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#" class="menu-item dropdown-toggle" data-toggle="dropdown">Thực phẩm chức năng&nbsp;<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Thực phẩm chức năng 1</a></li>
-                                <li><a href="#">Thực phẩm chức năng 2</a></li>
-                                <li><a href="#">Thực phẩm chức năng 3</a></li>
-                                <li><a href="#">Thực phẩm chức năng 4</a></li>
-                                <li>
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Thực phẩm chức năng 5<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Thực phẩm chức năng 5.1</a></li>
-                                        <li>
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Thực phẩm chức năng 5.2<b class="caret"></b></a>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Thực phẩm chức năng 5.2.1 <b class="caret"></b></a>
-                                                    <ul class="dropdown-menu">
-                                                        <li><a href="#">Thực phẩm chức năng 5.2.1.1</a></li>
-                                                        <li><a href="#">Thực phẩm chức năng 5.2.1.2</a></li>
-                                                        <li><a href="#">Thực phẩm chức năng 5.2.1.3</a></li>
-                                                        <li><a href="#">Thực phẩm chức năng 5.2.1.4</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a class="menu-item" href="#">Blog</a></li>
-                        <li><a class="menu-item" href="lam-dep-va-suc-khoe.html">Làm đẹp và Sức khỏe</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>-->
-
 
 <div class="row">
     <div class="col-xs-12">
@@ -139,7 +57,7 @@
     <div class="container">
         <div class="col-xs-12 prod-group-items">
             <div class="col-xs-12 prod-group-title">
-                <a href="danh-muc-san-pham.html">
+                <a href="product">
                     <div class="prod-group-name pull-left">
                         COMBO KHUYẾN MẠI
                     </div>
@@ -160,7 +78,7 @@
                                 <a href="gio-hang.html" class="btn btn-success btn-muangay">Mua ngay</a>
                                 <button type="button" class="btn btn-danger btn-muangay">Giỏ hàng</button>
                             </div>
-                            <a href="product">
+                            <a href="product/Detail">
                                 <div class="image">
                                     <img src="<?php echo $block->getViewFileUrl('images/prods/img-prod-'. ($i % 3) .'.png'); ?>" />
                                 </div>
@@ -182,7 +100,7 @@
     <div class="container">
         <div class="col-xs-12 prod-group-items">
             <div class="col-xs-12 prod-group-title">
-                <a href="danh-muc-san-pham.html">
+                <a href="product">
                     <div class="prod-group-name pull-left">
                         SẢN PHẨM ĐANG CÓ
                     </div>
@@ -203,7 +121,7 @@
                                 <a href="gio-hang.html" class="btn btn-success btn-muangay">Mua ngay</a>
                                 <button type="button" class="btn btn-danger btn-muangay">Giỏ hàng</button>
                             </div>
-                            <a href="product">
+                            <a href="product/Detail">
                                 <div class="image">
                                     <img src="<?php echo $block->getViewFileUrl('images/prods/img-prod-'. ($i % 3) .'.png'); ?>" />
                                 </div>
@@ -229,7 +147,7 @@
     <div class="container">
         <div class="col-xs-12 prod-group-items">
             <div class="col-xs-12 prod-group-title">
-                <a href="danh-muc-san-pham.html">
+                <a href="product">
                     <div class="prod-group-name pull-left">
                         ĐỐI TÁC
                     </div>
